; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_set_resolved_sym.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_set_resolved_sym.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@resolved_sym_map = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @set_resolved_sym(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @is_local_sym(i32* %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %2
  %9 = load i8*, i8** %3, align 8
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @map_put(i32* @resolved_sym_map, i8* %9, i32* %10)
  br label %12

12:                                               ; preds = %8, %2
  ret void
}

declare dso_local i32 @is_local_sym(i32*) #1

declare dso_local i32 @map_put(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
